# math

./: .gitignore  CMakeLists.txt
include/: math.hpp
